fix collapse about and home, fix card gradient

--- a/src/Styles/About.scss
+++ b/src/Styles/About.scss
@@ -20,5 +20,11 @@
 }
 
 .all-collapseAbout .svg-inline--fa {
-    left: 979px
+    left: 960px;
 }
+
+/*[id="react-collapsed-panel-:r0:"] {
+    
+    transition: height 10s !important;
+}*/
+  
