--- a/src/Styles/Card.scss
+++ b/src/Styles/Card.scss
@@ -1,3 +1,4 @@
+
 $cardShape : 340px;
 $space1 : 43px;
 $space2 : 56px;
@@ -33,5 +34,20 @@ h4 {
     padding-top: 275px;
     margin: 12px;
     width: 239px;
+    z-index: 2;
 }
 
+.img-container {
+    position: relative;
+}
+  
+.img-overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 340px;
+    height: 340px;
+    border-radius: 10px;
+    background: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, rgba(0, 0, 0, 0.5) 100%);
+}
+  
