--- a/src/Styles/Collapse.scss
+++ b/src/Styles/Collapse.scss
@@ -5,7 +5,6 @@
     width: 100%;
     display: flex;
     align-items: center;
-    padding-left: 10px;
 }
 
 .title-collapse {
@@ -15,24 +14,35 @@
     padding-top: 0px;
     margin: 0px;
     width: 0;
+    padding-left: 15px;
 }
 
 .content {
     font-family: Montserrat;
     font-weight: 400;
     color: #FF6060;
-    width: 552px;
-    padding : 20px 20px 20px 20px;
+    width: 582px;
     background: #F6F6F6;
+    list-style: none;
+    padding: 20px 0px 20px 0px;
+    border-radius: 5px;
 }
 
 .header-collapse .svg-inline--fa {
     font-size: 24px;
     position: relative;
-    left: 537px;
+    left: 525px;
     color: #FFFFFF;
     transition-duration: 239ms;
     transition-property: transform;
+}
+
+.p-desc {
+    padding: 0px 20px 0px 20px;
+}
+
+li {
+    padding: 0px 20px 0px 20px;
 }
 
 .header-collapse .svg-inline--fa:active {
